# odoo-pulse

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.playground.yml  glama.json  llms-install.md  manifest.json  pyproject.toml  requirements.txt  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  playground.yml  publish-mcp.yml  release.yml
docker/seed/: seed.py
docs/: install.md  playground.md  release-notes-project-finance-consistency.md  roadmap.md  tools.md
docs/launch/: devto-article.md  reddit-r-claudeai-r-mcp.md  reddit-r-odoo.md  show-hn.md  x-thread.md
odoo_mcp/: __init__.py  cache.py  domain_tools.py  odoo_client.py  runtime.py  server.py  tools_generic.py  tools_hr.py  tools_niche.py  tools_operations.py  tools_projects.py  tools_workflows.py  tools_write.py  workflow_helpers.py
odoo_pulse/: cache.py  domain_tools.py  odoo_client.py  project_shared.py  runtime.py  server.py  tool_groups.py  tools_engagement.py  tools_hr.py  tools_project_detail.py  tools_projects.py  tools_reports.py  tools_reports_inventory.py  tools_reports_ops.py  tools_reports_projects.py  tools_reports_pulse.py  tools_reports_sales.py  tools_workflows.py  workflow_helpers.py
scripts/: demo.tape  demo_pulse.py  make_icon.py  make_og.py  playground_smoke.sh  publish_smithery.sh  smoke_live.py  smoke_project_status.py
tests/: conftest.py  test_cache.py  test_client.py  test_client_aggregate.py  test_client_cache.py  test_config.py  test_crm_metrics.py  test_date_domains.py  test_domain_tools.py  test_finance_metrics.py  test_hr_metrics.py  test_project_budget_matching.py  test_project_finance.py  test_project_metrics.py  test_project_overdue.py  test_project_queries.py  test_project_shared.py  test_report_context.py  test_repository_hygiene.py  test_resources.py  test_runtime.py  test_sales_metrics.py  test_tool_groups.py  test_tools_aggregate.py  test_tools_attachment.py  test_tools_project_detail.py  test_tools_project_status_report.py  test_tools_projects.py  test_tools_reports_absence.py  test_tools_reports_budget.py  test_tools_reports_inventory.py  test_tools_reports_pipeline.py  test_tools_reports_procurement.py  test_tools_reports_production.py  test_tools_reports_projects.py  test_tools_reports_pulse.py  test_tools_reports_receivables.py  test_tools_reports_sales.py  test_tools_smoke.py  test_tools_sprint_health.py  (+3 more)
(+82 files in other folders)
