[project]
name = "odoo-mcp"
version = "0.1.0"
description = "MCP server for read-only access to Odoo via the XML-RPC external API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
odoo-mcp = "odoo_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["odoo_mcp"]
