[project]
name = "odoo-pulse"
version = "0.1.0"
description = "MCP server for read-only access to Odoo via the XML-RPC external API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
odoo-pulse = "odoo_pulse.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["odoo_pulse"]
