[project]
name = "odoo-pulse"
version = "1.6.0"
description = "AI business analyst for Odoo ERP (18+) — one-call reports with verdicts, over MCP"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Minh Hong", email = "minhhq@arrowhitech.com" }]
keywords = [
    "odoo",
    "mcp",
    "model-context-protocol",
    "erp",
    "claude",
    "ai",
    "xml-rpc",
    "analytics",
    "business-intelligence",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/minhhq-a1/odoo-pulse"
Repository = "https://github.com/minhhq-a1/odoo-pulse"
Issues = "https://github.com/minhhq-a1/odoo-pulse/issues"

[project.scripts]
odoo-pulse = "odoo_pulse.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["odoo_pulse"]
